--- a/LVLTUT/index.html
+++ b/LVLTUT/index.html
@@ -8,7 +8,17 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
-		<h1>Level Up Tuts</h1>
-		<p>Hello world this is html Boiler plate</p>
-	</body>
+		<div id="wrapper">
+			<div class="Level_up_Tut_title">
+				<div class="content_holder">
+					<h1>Level Up Tuts</h1>
+					<p>Hello world this is html Boiler plate</p>
+				</div>
+				
+				
+			</div>
+			
+	
+		</div>
+</body>	
 </html>
